FirmwareUpdate: Use apache commons for Base64 decode - DataTypeConverter does not play nice with java 1.8 and later